Bug 190860 - SVG export in Kmplot doesn't work properly
Summary: SVG export in Kmplot doesn't work properly
Status: RESOLVED FIXED
Alias: None
Product: kmplot
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Klaus-Dieter M
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-04-27 20:25 UTC by jonathan aquilina
Modified: 2018-11-02 18:18 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description jonathan aquilina 2009-04-27 20:25:17 UTC
Version:           4 (using KDE 4.2.2)
OS:                Linux
Installed from:    I Don't Know

Binary package hint: kdeedu

Kmplot version: 4:4.2.2-0ubuntu1

SVG export worked perfectly in KDE 3.5 version of Kmplot, but now it doesn't. The bounding box is much larger than the plot area, function graphs extends beyond plot area. Moreover, now plots have much more complicated structure so it is not easy to correct the exported SVG file. For this reason SVG export is close to being useless and my only solution for the problem is to stick with 3.5 version of the software.

Easy enough to reproduce
Testcase:
 * Create => Cortesian Plot
 * Function => y = x^2
 * File -> Export -> test.svg
 * Open test.svg with inkscape

the bug can be found on launchpad at 

https://launchpad.net/bugs/357511
Comment 1 Yuri Chornoivan 2018-11-02 18:18:04 UTC
Git commit 21ba18850aa4966ec909c30bb36a37c90fe82554 by Yuri Chornoivan.
Committed on 02/11/2018 at 18:17.
Pushed by yurchor into branch 'master'.

Fix size of the canvas for exported SVG file

Image still not clipped, needs other work on filtering y-data. See https://bugreports.qt.io/browse/QTBUG-1865

Otherwise, image is readily usable if the range is defined manually inside KmPlot.

M  +1    -1    kmplot/maindlg.cpp

https://commits.kde.org/kmplot/21ba18850aa4966ec909c30bb36a37c90fe82554