Fix size of the canvas for exported SVG file

Image still not clipped, needs other work on filtering y-data. See https://bugreports.qt.io/browse/QTBUG-1865

Otherwise, image is readily usable if the range is defined manually inside KmPlot.

BUG: 190860